# Magistracy

./: .gitignore  README.md
Diploma/: Prudnikov_pres.ppt  Prudnikov_presentation_42.ppt  Prudnikov_presentation_42.pptx  Untitled Book.xlsx  (+15 more)
MPI/lab4_1/lab4_1/: CMakeLists.txt  lab4.c  lab4.cpp  lab4_1.vcxproj
MPI/lab4_1/lab4_1/MPI_Debug/lab4_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab4_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
WebServices/NewsService/: CMakeLists.txt  Makefile  NSMongoStorage.cpp  NSMongoStorage.h  NewsService.cpp  NewsService1.conf  NewsService2.conf  NewsServiceHandler.cpp  NewsServiceHandler.h  readme.md
WebServices/NewsService/LoadTesting/: load.ini
WebServices/NewsService/LoadTesting/logs/: _1467d40aac6c978698a5ca27f93f7fd8.stpd_si.json  _b18e8c39b57e2a1fcfe6860ebb6ec3c6.stpd  _b18e8c39b57e2a1fcfe6860ebb6ec3c6.stpd_si.json  _cd13ce85bc335ffe370027fba9a08b79.stpd_si.json
WebServices/NewsService/LoadTesting/logs/2016-12-19_10-37-45.WHgif6/: agent_3ci6hH.cfg  monitoring_2H6ylU.data  phantom_SmUM2P.conf
WebServices/NewsService/LoadTesting/logs/2016-12-20_11-55-30.4560rF/: monitoring_vmqWzG.data  phantom_ytwfdI.conf
WebServices/NewsService/LoadTesting/logs/2016-12-27_13-24-27.Wq8FNg/: monitoring_35ItaT.data  phantom_Wsgi3V.conf
WebServices/NewsService/LoadTesting/logs/2016-12-29_21-02-26.80xMWE/: monitoring_r9tNV_.data  phantom_An_IJC.conf
WebServices/NewsService/LoadTesting/logs/overload/: 4331  4365  5235
WebServices/NewsService/MergeNews/: CMakeLists.txt  Makefile  MergeNews.cpp
(+343 files in other folders)
